src/test/ui/suggestions/appropriate-type-param-turbofish.stderr
error[E0283]: type annotations needed
  --> $DIR/appropriate-type-param-turbofish.rs:3:35
   |
LL |         vec![1, 2, 3].into_iter().collect();
   |                                   ^^^^^^^ cannot infer type for type parameter `B` declared on the associated function `collect`
   |
   = note: cannot satisfy `_: std::iter::FromIterator<i32>`
help: consider specifying the type argument in the method call
   |
LL |         vec![1, 2, 3].into_iter().collect::<B>();
   |                                          ^^^^^

error[E0283]: type annotations needed
  --> $DIR/appropriate-type-param-turbofish.rs:6:41
   |
LL |         vec!["a", "b", "c"].into_iter().collect();
   |                                         ^^^^^^^ cannot infer type for type parameter `B` declared on the associated function `collect`
   |
   = note: cannot satisfy `_: std::iter::FromIterator<&str>`
help: consider specifying the type argument in the method call
   |
LL |         vec!["a", "b", "c"].into_iter().collect::<B>();
   |                                                ^^^^^

error[E0283]: type annotations needed
  --> $DIR/appropriate-type-param-turbofish.rs:9:41
   |
LL |         vec!['a', 'b', 'c'].into_iter().collect();
   |                                         ^^^^^^^ cannot infer type for type parameter `B` declared on the associated function `collect`
   |
   = note: cannot satisfy `_: std::iter::FromIterator<char>`
help: consider specifying the type argument in the method call
   |
LL |         vec!['a', 'b', 'c'].into_iter().collect::<B>();
   |                                                ^^^^^

error[E0283]: type annotations needed
  --> $DIR/appropriate-type-param-turbofish.rs:14:43
   |
LL |         let _ = vec![1, 2, 3].into_iter().collect();
   |             -                             ^^^^^^^ cannot infer type for type parameter `B` declared on the associated function `collect`
   |             |
   |             consider giving this pattern a type
   |
   = note: cannot satisfy `_: std::iter::FromIterator<i32>`

error[E0283]: type annotations needed
  --> $DIR/appropriate-type-param-turbofish.rs:17:49
   |
LL |         let _ = vec!["a", "b", "c"].into_iter().collect();
   |             -                                   ^^^^^^^ cannot infer type for type parameter `B` declared on the associated function `collect`
   |             |
   |             consider giving this pattern a type
   |
   = note: cannot satisfy `_: std::iter::FromIterator<&str>`

error[E0283]: type annotations needed
  --> $DIR/appropriate-type-param-turbofish.rs:20:49
   |
LL |         let _ = vec!['a', 'b', 'c'].into_iter().collect();
   |             -                                   ^^^^^^^ cannot infer type for type parameter `B` declared on the associated function `collect`
   |             |
   |             consider giving this pattern a type
   |
   = note: cannot satisfy `_: std::iter::FromIterator<char>`

error[E0283]: type annotations needed
  --> $DIR/appropriate-type-param-turbofish.rs:38:5
   |
LL | fn x<X: T>() -> X {
   |         - required by this bound in `x`
...
LL |     x();
   |     ^ cannot infer type for type parameter `X` declared on the function `x`
   |
   = note: cannot satisfy `_: T`
help: consider specifying the type argument in the function call
   |
LL |     x::<X>();
   |      ^^^^^

error[E0283]: type annotations needed
  --> $DIR/appropriate-type-param-turbofish.rs:42:13
   |
LL | fn x<X: T>() -> X {
   |         - required by this bound in `x`
...
LL |     let _ = x();
   |         -   ^ cannot infer type for type parameter `X` declared on the function `x`
   |         |
   |         consider giving this pattern a type
   |
   = note: cannot satisfy `_: T`
help: consider specifying the type argument in the function call
   |
LL |     let _ = x::<X>();
   |              ^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0283`.
